# JETSON

./: README.md
aev_ws/: auto_start.sh
aev_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
aev_ws/devel/include/aev_pkg/: driving_mode_msg.h  ecu_feedback_msg.h  gui_msg.h  lane_detection_msg.h  mpc_msg.h  object_detection_msg.h  obstruction_imu_mgs.h  radar_msg.h  system_monitor_msg.h
aev_ws/devel/lib/aev_pkg/: DrivingModeSel  MPC  ObjectDetection  Radar  SystemMonitor  listener  ssd  talker  test_all
aev_ws/devel/lib/pkgconfig/: aev_pkg.pc
aev_ws/devel/lib/python2.7/dist-packages/aev_pkg/msg/: __init__.py  _driving_mode_msg.py  _ecu_feedback_msg.py  _gui_msg.py  _lane_detection_msg.py  _mpc_msg.py  _object_detection_msg.py  _obstruction_imu_mgs.py  _radar_msg.py  _system_monitor_msg.py
aev_ws/devel/share/aev_pkg/cmake/: aev_pkg-msg-extras.cmake  aev_pkg-msg-paths.cmake  aev_pkgConfig.cmake
aev_ws/devel/share/common-lisp/ros/aev_pkg/msg/: _package.lisp  _package_driving_mode_msg.lisp  _package_ecu_feedback_msg.lisp  _package_gui_msg.lisp  _package_lane_detection_msg.lisp  _package_mpc_msg.lisp  _package_object_detection_msg.lisp  _package_obstruction_imu_mgs.lisp  _package_system_monitor_msg.lisp  aev_pkg-msg.asd  driving_mode_msg.lisp  ecu_feedback_msg.lisp  gui_msg.lisp  lane_detection_msg.lisp  mpc_msg.lisp  object_detection_msg.lisp  obstruction_imu_mgs.lisp  radar_msg.lisp  system_monitor_msg.lisp
aev_ws/devel/share/gennodejs/ros/aev_pkg/msg/: _index.js  driving_mode_msg.js  ecu_feedback_msg.js  gui_msg.js  lane_detection_msg.js  mpc_msg.js  object_detection_msg.js  obstruction_imu_mgs.js  radar_msg.js  system_monitor_msg.js
aev_ws/devel/share/roseus/ros/aev_pkg/: manifest.l
aev_ws/devel/share/roseus/ros/aev_pkg/msg/: driving_mode_msg.l  ecu_feedback_msg.l  gui_msg.l  lane_detection_msg.l  mpc_msg.l  object_detection_msg.l  obstruction_imu_mgs.l  radar_msg.l  system_monitor_msg.l
aev_ws/src/aev_pkg/: CMakeLists.txt  package.xml
aev_ws/src/aev_pkg/launch/: start_all (copy).launch  start_all.launch
aev_ws/src/aev_pkg/msg/: driving_mode_msg.msg  ecu_feedback_msg.msg  gui_msg.msg  lane_detection_msg.msg  mpc_msg.msg  object_detection_msg.msg  system_monitor_msg.msg
aev_ws/src/aev_pkg/src/: SystemDefine.h
aev_ws/src/aev_pkg/src/CAN/: CAN_Node.py
aev_ws/src/aev_pkg/src/DrivingModeSel/: DrivingModeSel.cpp  DrivingModeSel.h  DrivingModeSel_main.cpp
aev_ws/src/aev_pkg/src/LaneDetection/: Lane_Detection_CenterLine1.py  Lane_Detection_LaneLine1.py  Lane_Detection_RealsenseCenterLine1.py  Lane_Detection_RealsenseLaneLine1.py
aev_ws/src/aev_pkg/src/LaneDetection/New folder/LaneDetection_bk/: Lane_Detection.py  Lane_Detection_CenterLine.py  Lane_Detection_CenterLine1.py  Lane_Detection_Realsense.py  Lane_Detection_RealsenseCenterLine.py  Lane_Detection_RealsenseCenterLine1.py  main.py
aev_ws/src/aev_pkg/src/LaneDetection/New folder/LaneDetection_bk/backupCode/: binariez.py  test.py
aev_ws/src/aev_pkg/src/LaneDetection/backupCode/: FileVideoStream.py  Lane_Detection.py  Lane_Detection_CenterLine.py  detect-thres.py  draw_detected_lanes.py
aev_ws/src/aev_pkg/src/MPC/: GenCode_MPC.cpp  GenCode_MPC.h  GenCode_MPC_data.cpp  GenCode_MPC_private.h  ert_main.cpp  rtGetInf.h  rtGetNaN.h  rt_assert.h  rtw_solver.h  rtwtypes.h
aev_ws/src/aev_pkg/src/MPC/Old/: GenCode_MPC_types.h  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  rt_nonfinite.h  rtw_continuous.h
aev_ws/src/aev_pkg/src/MPC/aa/: MPC.cpp  MPC.h  MPC_data.cpp  MPC_private.h  MPC_types.h  defines.txt  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_assert.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
aev_ws/src/aev_pkg/src/ObjectDetection/: Graphic.cpp  Graphic.h  MessageQueue.h  SSDModel.cpp  SSDModel.h  depth_handler.cpp  depth_handler.h  imu_handler.h  main.cpp  main.h  rgb_image_handler.cpp  rgb_image_handler.h  rotation_estimator.cpp  rotation_estimator.h  test_callback_imu.cpp  test_ssd_video.cpp
aev_ws/src/aev_pkg/src/ObjectDetection/debug_and_report_code/: main.cpp  rgb_image_handler.cpp  rgb_image_handler.h
aev_ws/src/aev_pkg/src/Radar/: Radar.cpp  Radar_Cfg.cpp  Radar_Cfg.h  ttcRadar_Cfg.cpp  ttcRadar_Cfg.h
aev_ws/src/aev_pkg/src/SystemMonitor/: SystemMonitor.cpp  SystemMonitor.h  SystemMonitor_main.cpp
aev_ws/src/aev_pkg/src/test/: listener.cpp  talker.cpp  test_all.cpp
